# FastAPI

./: .env  .env.example  .env.test  Dockerfile  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements.txt.
app/: main.py
app/alembic/: alembic.ini  env.py
app/alembic/backup/: 001_initial_migration.py  002_add_user_profile_fields.py
app/alembic/versions/: 6a7b6cc00852_complete_user_model.py  7b8c9da00123_location_management_system.py
app/api/: api.py
app/api/dependencies/: auth.py
app/api/middlewares/: jwt.py
app/api/routes/: auth.py  items.py  locations.py  roles.py  user_locations.py  users.py
app/core/: auth.py  config.py  exceptions.py  security.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: __init__.py  item.py  location.py  role.py  user.py  user_location.py
app/schemas/: base.py  item.py  location.py  role.py  token.py  user.py  user_location.py
app/services/: item.py  location.py  role.py  user.py  user_location.py
app/tests/: conftest.py
app/tests/api/: test_auth.py  test_items.py  test_users.py
app/tests/services/: test_item_service.py  test_user_service.py
scripts/: docker-entrypoint.sh  migration.sh  run_tests.sh
